--- a/deployment.yaml
+++ b/deployment.yaml
@@ -8,7 +8,7 @@ metadata:
   labels:
     app: goapi
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: goapi
@@ -24,18 +24,4 @@ spec:
         image: ${CICD_IMAGE}:${CICD_EXECUTION_SEQUENCE}
         ports:
         - containerPort: 80
-
----
-kind: Service
-apiVersion: v1
-metadata:
-  name: go-service
-  namespace: siga
-spec:
-  selector:
-    app: goapi
-  type: ClusterIP
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 80
+          hostPort: 443
