--- a/deployment.yaml
+++ b/deployment.yaml
@@ -25,3 +25,17 @@ spec:
         ports:
         - containerPort: 80
           hostPort: 443
+---
+kind: Service
+apiVersion: v1
+metadata:
+  name: go-service
+  #namespace: go
+spec:
+  selector:
+    app: goapi
+  type: ClusterIP
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 443
