--- a/deployment.yaml
+++ b/deployment.yaml
@@ -24,13 +24,13 @@ spec:
         image: ${CICD_IMAGE}:${CICD_EXECUTION_SEQUENCE}
         ports:
         - containerPort: 80
-          hostPort: 80
+          nodePort: 80
 ---
 kind: Service
 apiVersion: v1
 metadata:
   name: go-service
-  #namespace: go
+  namespace: siga
 spec:
   selector:
     app: goapi
