--- a/deployment.yaml
+++ b/deployment.yaml
@@ -24,8 +24,8 @@ spec:
         image: ${CICD_IMAGE}:${CICD_EXECUTION_SEQUENCE}
         ports:
         - containerPort: 80
-          hostPort: 5050
-         
+#          hostPort: 5050
+
 ---
 kind: Service
 apiVersion: v1
