--- a/deployment.yaml
+++ b/deployment.yaml
@@ -24,7 +24,9 @@ spec:
         image: ${CICD_IMAGE}:${CICD_EXECUTION_SEQUENCE}
         ports:
         - containerPort: 80
-#          hostPort: 5050
+          hostPort: 5050
+          name: saidaconta
+          protocol: TCP
 
 ---
 kind: Service
