--- a/deployment.yaml
+++ b/deployment.yaml
@@ -23,7 +23,9 @@ spec:
       - name: goapi
         image: ${CICD_IMAGE}:${CICD_EXECUTION_SEQUENCE}
         ports:
-        - containerPort: 80
+        - name: saida5050
+          protocol: TCP
+          containerPort: 80
           hostPort: 5050
 
 ---
