--- a/deployment.yaml
+++ b/deployment.yaml
@@ -23,10 +23,10 @@ spec:
       - name: goapi
         image: ${CICD_IMAGE}:${CICD_EXECUTION_SEQUENCE}
         ports:
-        - containerPort: 80
-          hostPort: 5050
-          name: saida5050
+        - name: saida5050
+          containerPort: 80
           protocol: TCP
+          hostPort: 5050
 
 ---
 kind: Service
