--- a/deployment.yaml
+++ b/deployment.yaml
@@ -8,7 +8,7 @@ metadata:
   labels:
     app: goapi
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: goapi
@@ -43,4 +43,4 @@ spec:
     port: 80
     protocol: TCP
     targetPort: 80
-  type: ClusterIP
+  type: NodePort
